--- a/action.yml
+++ b/action.yml
@@ -31,6 +31,8 @@ outputs:
 runs:
   using: 'composite'
   steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
     - name: Execute Terragrunt
       shell: bash
       run: src/main.sh
