--- a/action.yml
+++ b/action.yml
@@ -31,6 +31,9 @@ outputs:
 runs:
   using: 'composite'
   steps:
+    - shell: bash
+      run: |
+        ls -la 
     - name: Execute Terragrunt
       shell: bash
       run: bash main.sh
