--- a/action.yml
+++ b/action.yml
@@ -31,6 +31,8 @@ outputs:
 runs:
   using: 'composite'
   steps:
+    - shell: bash
+      run: env
     - name: Execute Terragrunt
       shell: bash
-      run: bash main.sh
+      run: bash ${{ github.action_path }}/src/main.sh 
