--- a/action.yml
+++ b/action.yml
@@ -31,8 +31,12 @@ outputs:
 runs:
   using: 'composite'
   steps:
-    - shell: bash
-      run: env
     - name: Execute Terragrunt
       shell: bash
+      env:
+        INPUT_TF_VERSION: ${{ inputs.tf_version }}
+        INPUT_TG_VERSION: ${{ inputs.tg_version }}
+        INPUT_TG_COMMAND: ${{ inputs.tg_command }}
+        INPUT_TG_COMMENT: ${{ inputs.tg_comment }}
+        INPUT_TG_DIR: ${{ inputs.tg_dir }}
       run: bash ${{ github.action_path }}/src/main.sh 
